# miniharbor

./: .gitignore  README.md  install-base.sh  pyproject.toml  status.md
docs/: architecture.md  build-order.md  data-model.md  design-notes.md  industry-comparison.md
docs/components/: agent.md  environment.md  harness.md  logging.md  orchestrator.md  registry.md  tool-server.md  verifier.md
docs/pipeline/: posttraining.md
scripts/: run_trial.py
src/miniharbor/: __init__.py  logger.py  models.py  registry.py  run.py  trial.py  verifier.py
src/miniharbor/agent/: __init__.py  base.py  model.py  scripted.py
src/miniharbor/environment/: __init__.py  base.py  docker.py  fake.py
src/miniharbor/harness/: __init__.py  base.py
src/miniharbor/toolserver/: __init__.py  base.py
tasks/: README.md
tasks/logfixbench/seed_001/: instruction.md  task.toml
tasks/logfixbench/seed_001/solution/: solution.patch
tasks/logfixbench/seed_001/tests/: run.sh  test_hidden.py
tasks/logfixbench/seed_001/workspace/: README.md  storage.py  tests_public.py  worker.py
tasks/logfixbench/seed_002/: instruction.md  task.toml
tasks/logfixbench/seed_002/solution/: solution.patch
tasks/logfixbench/seed_003/: instruction.md  task.toml
tests/: test_agent_harness.py  test_fake_environment.py  test_model_agent.py  test_model_clients.py  test_models.py  test_terminal_protocol.py  test_toolserver.py  test_trial.py  test_verifier_logger.py
tests/integration/: test_docker_seed001.py  test_harness_docker.py  test_real_trial_docker.py  test_toolserver_docker.py
(+12 files in other folders)
