[project]
name = "miniharbor"
version = "0.0.1"
description = "A small, correct agent-evaluation and RL-environment runner."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniharbor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Only collect our tests. Task bundles under tasks/ contain hidden tests that are
# meant to run INSIDE the sandbox (they import the in-sandbox `worker`), not here.
testpaths = ["tests"]
